renaming and typos fix bulletin
- Атомарные свопы между блокчейнами Bitcoin и Monero

--- a/publications/bulletins/Атомарные свопы между блокчейнами Bitcoin и Monero/bibliography.bib
+++ b/publications/bulletins/Атомарные свопы между блокчейнами Bitcoin и Monero/bibliography.bib
@@ -57,7 +57,7 @@
   isbn      = {3-540-97317-6},
   pages     = {239--252},
   series    = {CRYPTO '89},
-  title     = {Efficient Identification and Signatures for Smart Cards (Эффективная идентификация и подписи для смарт-акрт)},
+  title     = {Efficient Identification and Signatures for Smart Cards (Эффективная идентификация и подписи для смарт-контрактов)},
 }
 
 @misc{scriptless-atomic-swap,
