--- a/publications/bulletins/Атомарные свопы между блокчейнами Bitcoin и Monero/main.tex
+++ b/publications/bulletins/Атомарные свопы между блокчейнами Bitcoin и Monero/main.tex
@@ -108,7 +108,7 @@
 
 \begin{document}
 
-\title{Атомные свопы между блокчейнами Bitcoin и Monero}
+\title{Атомарные свопы между блокчейнами Bitcoin и Monero}
 \author{Джоэл Гуггер (Jo\"el Gugger)}
 
 \authorrunning{Jo\"el Gugger et al.}
@@ -118,14 +118,14 @@
 \maketitle
 
 \begin{abstract}
-    Атомные свопы уже используются в случае с блокчейнами, где возможно использование контрактов с хешированной временной блокировкой. Но когда один из блокчейнов не предусматривает такой возможности, это становится проблемой. Данный протокол описывает, как обеспечить возможность проведения атомных свопов между блокчейнами Bitcoin и Monero в рамках двух транзакций на блокчейн без привлечения каких-либо централизованных организаций, серверов или других участников, требующих доверия.
+    Атомарные свопы уже используются в случае с блокчейнами, где возможно использование контрактов с хешированной временной блокировкой. Но когда один из блокчейнов не предусматривает такой возможности, это становится проблемой. Данный протокол описывает, как обеспечить возможность проведения атомарных свопов между блокчейнами Bitcoin и Monero в рамках двух транзакций на блокчейн без привлечения каких-либо централизованных организаций, серверов или других участников, требующих доверия.
     Нами предлагается вариант проведения свопа между двумя участниками, один из которых владеет Bitcoin, а другой - Monero. При этом, если оба участника последуют этому протоколу, их средства ни на каком этапе не будут подвергаться какому-либо риску. Протокол не требует ни использования временной блокировки со стороны Monero, ни реализации скриптов, но требует наличия двух доказательств знания равного дискретного логарифма в группах \texttt{edward25519} и \texttt{secp256k1}, а также одноразовой подписи VES \texttt{ECDSA}.\linebreak
-
-    \textbf{Ключевые слова:} блокчейн, атомный своп, проведение транзакций между блокчейнами, Bitcoin, Monero
+    
+    \textbf{Ключевые слова:} блокчейн, атомарный своп, проведение транзакций между блокчейнами, Bitcoin, Monero
 \end{abstract}
 
 \section{Введение}
-Нами описывается протокол проведения атомных свопов между блокчейнами Monero и Bitcoin, но данный протокол можно обобщить для любой криптовалюты, которая соответствует тем же требованиям, что и Monero, а также любой другой криптовалюты, которая соответствует тем же требованиям, что и Bitcoin. Подробный список предварительных условий приводится в Главе \ref{prerequisites}.
+Нами описывается протокол проведения атомарных свопов между блокчейнами Monero и Bitcoin, но данный протокол можно обобщить для любой криптовалюты, которая соответствует тем же требованиям, что и Monero, а также любой другой криптовалюты, которая соответствует тем же требованиям, что и Bitcoin. Подробный список предварительных условий приводится в Главе \ref{prerequisites}.
 
 Участники отправляют средства на определенный адрес, генерируемый во время процесса (блокировка) в каждом блокчейне (обмен между блокчейнами), и каждая сторона может взять под контроль средства в другом блокчейне (своп) автоматически (то есть возможность получения средств из любого блокчейна является взаимоисключающей из-за возможности забирать средства из другого блокчейна).
 
